Bug 565581 - Fix issues reported by Sonar
Change-Id: I2be675cd5bc1828c60ef552463c2b4fa542cbb54
Signed-off-by: Dirk Fauth <dirk.fauth@googlemail.com>